--- a/TheSpaces/Places/Places.storyboard
+++ b/TheSpaces/Places/Places.storyboard
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Places List View Controller-->
+        <!--My Places View Controller-->
         <scene sceneID="Ne7-if-9jT">
             <objects>
-                <viewController storyboardIdentifier="PlacesList" id="LY3-nW-P8b" customClass="PlacesListViewController" customModule="TheSpaces" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PlacesList" id="LY3-nW-P8b" customClass="MyPlacesViewController" customModule="TheSpaces" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="suA-eK-dUH">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="SUu-un-btF"/>
