--- a/TheSpaces/Search/PlacesList/Views/PlacePreviewView/PlacePreviewView.xib
+++ b/TheSpaces/Search/PlacesList/Views/PlacePreviewView/PlacePreviewView.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,49 +15,65 @@
                 <outlet property="nameLabel" destination="tbc-bQ-5zX" id="33T-Qo-jKc"/>
                 <outlet property="priceLabel" destination="fnv-SL-DID" id="j2d-qE-do8"/>
                 <outlet property="textView" destination="hYd-nT-VNF" id="d81-Zu-V52"/>
+                <outlet property="textViewHeightConstr" destination="TZv-l6-dAo" id="PYM-as-Qug"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="479" height="207"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="493" height="188"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="D0D-2Z-538">
-                    <rect key="frame" x="0.0" y="0.0" width="479" height="207"/>
+                <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="D0D-2Z-538">
+                    <rect key="frame" x="0.0" y="0.0" width="493" height="188"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="maU-97-oAc">
-                            <rect key="frame" x="0.0" y="0.0" width="207" height="207"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="maU-97-oAc" secondAttribute="height" multiplier="1:1" id="JI8-Vz-IIk"/>
-                            </constraints>
-                        </imageView>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o4S-wl-wNM">
-                            <rect key="frame" x="219" y="0.0" width="260" height="207"/>
+                        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xfJ-Dq-GNZ">
+                            <rect key="frame" x="0.0" y="0.0" width="126" height="188"/>
                             <subviews>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="hME-zv-wdk">
-                                    <rect key="frame" x="0.0" y="8" width="260" height="191"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="253" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="maU-97-oAc">
+                                    <rect key="frame" x="0.0" y="31" width="126" height="126"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="maU-97-oAc" secondAttribute="height" multiplier="1:1" priority="900" id="JI8-Vz-IIk"/>
+                                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="126" id="MsX-tq-MQo"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstItem="maU-97-oAc" firstAttribute="centerY" secondItem="xfJ-Dq-GNZ" secondAttribute="centerY" id="5fX-Oy-iTY"/>
+                                <constraint firstAttribute="trailing" secondItem="maU-97-oAc" secondAttribute="trailing" id="d8F-rd-gSZ"/>
+                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="126" id="hZZ-cN-dbW"/>
+                                <constraint firstItem="maU-97-oAc" firstAttribute="leading" secondItem="xfJ-Dq-GNZ" secondAttribute="leading" id="htS-o6-pu0"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" verticalCompressionResistancePriority="755" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4S-wl-wNM">
+                            <rect key="frame" x="138" y="0.0" width="355" height="188"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="755" insetsLayoutMarginsFromSafeArea="NO" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="hME-zv-wdk">
+                                    <rect key="frame" x="0.0" y="8" width="355" height="172"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="255" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tbc-bQ-5zX">
-                                            <rect key="frame" x="0.0" y="0.0" width="260" height="20.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" verticalCompressionResistancePriority="753" insetsLayoutMarginsFromSafeArea="NO" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tbc-bQ-5zX">
+                                            <rect key="frame" x="0.0" y="0.0" width="355" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="254" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnv-SL-DID">
-                                            <rect key="frame" x="0.0" y="30.5" width="260" height="20.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="752" insetsLayoutMarginsFromSafeArea="NO" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnv-SL-DID">
+                                            <rect key="frame" x="0.0" y="30.5" width="355" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9cL-sU-oRm">
-                                            <rect key="frame" x="0.0" y="61" width="260" height="20.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" insetsLayoutMarginsFromSafeArea="NO" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9cL-sU-oRm">
+                                            <rect key="frame" x="0.0" y="61" width="355" height="61"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Number" translatesAutoresizingMaskIntoConstraints="NO" id="hYd-nT-VNF">
-                                            <rect key="frame" x="0.0" y="91.5" width="260" height="99.5"/>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentInsetAdjustmentBehavior="never" editable="NO" text="Number" translatesAutoresizingMaskIntoConstraints="NO" id="hYd-nT-VNF">
+                                            <rect key="frame" x="0.0" y="132" width="355" height="40"/>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="40" id="TZv-l6-dAo"/>
+                                            </constraints>
                                             <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -80,14 +95,13 @@
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="D0D-2Z-538" secondAttribute="trailing" id="BKE-dj-x0R"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="D0D-2Z-538" secondAttribute="bottom" id="Hht-qb-a4k"/>
-                <constraint firstItem="D0D-2Z-538" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Zoi-Dg-h2p"/>
-                <constraint firstItem="D0D-2Z-538" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="uUj-gS-CAa"/>
+                <constraint firstAttribute="trailing" secondItem="D0D-2Z-538" secondAttribute="trailing" id="BKE-dj-x0R"/>
+                <constraint firstAttribute="bottom" secondItem="D0D-2Z-538" secondAttribute="bottom" id="Hht-qb-a4k"/>
+                <constraint firstItem="D0D-2Z-538" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Zoi-Dg-h2p"/>
+                <constraint firstItem="D0D-2Z-538" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="uUj-gS-CAa"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="184.78260869565219" y="-88.727678571428569"/>
+            <point key="canvasLocation" x="151.19999999999999" y="-130.43478260869566"/>
         </view>
     </objects>
 </document>
