--- a/TheSpaces/Search/PlacesList/Views/PlacePreviewView/PlacePreviewView.xib
+++ b/TheSpaces/Search/PlacesList/Views/PlacePreviewView/PlacePreviewView.xib
@@ -28,10 +28,10 @@
             <rect key="frame" x="0.0" y="0.0" width="312" height="145"/>
             <subviews>
                 <view contentMode="scaleToFill" horizontalHuggingPriority="260" translatesAutoresizingMaskIntoConstraints="NO" id="xfJ-Dq-GNZ">
-                    <rect key="frame" x="0.0" y="0.0" width="126" height="145"/>
+                    <rect key="frame" x="0.0" y="0.0" width="126.5" height="145"/>
                     <subviews>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="XBa-QZ-f25">
-                            <rect key="frame" x="0.0" y="9.5" width="126" height="126"/>
+                            <rect key="frame" x="0.0" y="9" width="126.5" height="127"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="XBa-QZ-f25" secondAttribute="height" multiplier="1:1" id="3oS-X8-wI1"/>
@@ -44,7 +44,7 @@
                             </collectionViewFlowLayout>
                         </collectionView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VAh-uG-x7r" customClass="FlexiblePageControl" customModule="FlexiblePageControl">
-                            <rect key="frame" x="0.0" y="119.5" width="126" height="6"/>
+                            <rect key="frame" x="0.0" y="120" width="126.5" height="6"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="6" id="EgR-35-7XX"/>
@@ -66,16 +66,15 @@
                         <constraint firstItem="VAh-uG-x7r" firstAttribute="leading" secondItem="XBa-QZ-f25" secondAttribute="leading" priority="900" id="pXl-IB-Frw"/>
                         <constraint firstItem="XBa-QZ-f25" firstAttribute="centerY" secondItem="xfJ-Dq-GNZ" secondAttribute="centerY" id="qbB-I0-yha"/>
                         <constraint firstItem="VAh-uG-x7r" firstAttribute="centerX" secondItem="xfJ-Dq-GNZ" secondAttribute="centerX" id="sRM-LR-5LO"/>
-                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="126" id="uSf-tH-L36"/>
                         <constraint firstItem="XBa-QZ-f25" firstAttribute="top" secondItem="xfJ-Dq-GNZ" secondAttribute="top" priority="950" id="ulA-jd-nt9"/>
                         <constraint firstItem="XBa-QZ-f25" firstAttribute="bottom" secondItem="VAh-uG-x7r" secondAttribute="bottom" constant="10" id="yo7-Vk-qcM"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o4S-wl-wNM">
-                    <rect key="frame" x="136" y="0.0" width="176" height="145"/>
+                    <rect key="frame" x="136.5" y="0.0" width="175.5" height="145"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="761" insetsLayoutMarginsFromSafeArea="NO" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tbc-bQ-5zX">
-                            <rect key="frame" x="0.0" y="8" width="176" height="23"/>
+                            <rect key="frame" x="0.0" y="8" width="175.5" height="23"/>
                             <constraints>
                                 <constraint firstAttribute="height" priority="999" constant="23" id="BeD-g1-riJ"/>
                             </constraints>
@@ -84,7 +83,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnv-SL-DID">
-                            <rect key="frame" x="0.0" y="41" width="176" height="23"/>
+                            <rect key="frame" x="0.0" y="41" width="175.5" height="23"/>
                             <constraints>
                                 <constraint firstAttribute="height" priority="998" constant="23" id="UaE-CI-BPL"/>
                             </constraints>
@@ -93,7 +92,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" insetsLayoutMarginsFromSafeArea="NO" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9cL-sU-oRm">
-                            <rect key="frame" x="0.0" y="74" width="176" height="23"/>
+                            <rect key="frame" x="0.0" y="74" width="175.5" height="23"/>
                             <constraints>
                                 <constraint firstAttribute="height" priority="999" constant="23" id="esI-NF-07G"/>
                             </constraints>
@@ -102,7 +101,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="200" insetsLayoutMarginsFromSafeArea="NO" contentInsetAdjustmentBehavior="never" editable="NO" text="Number" translatesAutoresizingMaskIntoConstraints="NO" id="hYd-nT-VNF">
-                            <rect key="frame" x="0.0" y="107" width="176" height="30"/>
+                            <rect key="frame" x="0.0" y="107" width="175.5" height="30"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" priority="997" constant="40" id="TZv-l6-dAo"/>
@@ -136,6 +135,7 @@
                 <constraint firstItem="o4S-wl-wNM" firstAttribute="leading" secondItem="xfJ-Dq-GNZ" secondAttribute="trailing" constant="10" id="7EM-VX-jxf"/>
                 <constraint firstItem="xfJ-Dq-GNZ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="8xs-Oh-qtA"/>
                 <constraint firstItem="o4S-wl-wNM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="9Kw-dW-cmC"/>
+                <constraint firstItem="xfJ-Dq-GNZ" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="133:328" id="GMx-Pp-epS"/>
                 <constraint firstItem="xfJ-Dq-GNZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="nHp-ea-mhA"/>
                 <constraint firstAttribute="bottom" secondItem="o4S-wl-wNM" secondAttribute="bottom" id="o44-sL-B04"/>
                 <constraint firstAttribute="trailing" secondItem="o4S-wl-wNM" secondAttribute="trailing" id="oDC-GZ-dvB"/>
