--- a/TheSpaces/Search/Search.storyboard
+++ b/TheSpaces/Search/Search.storyboard
@@ -117,7 +117,7 @@
         <!--Search History View Controller-->
         <scene sceneID="vYd-cw-J1M">
             <objects>
-                <viewController id="cve-m4-eeW" customClass="SearchHistoryViewController" customModule="TheSpaces" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchHistory" id="cve-m4-eeW" customClass="SearchHistoryViewController" customModule="TheSpaces" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="77n-Cd-GY4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
